--- a/nailgun/static/templates/support/page.html
+++ b/nailgun/static/templates/support/page.html
@@ -59,4 +59,18 @@
     </div>
   </div>
 
+  <hr>
+  
+  <div class="row-fluid">
+    <div class="span2"><div class="img-download-logs2"></div></div>
+    <div class="span10">
+      <h4>Capacity Audit</h4>
+      <p>
+         View and download capacity log
+      </p>
+      <p>
+        <a class="btn" href="#capacity">View Capacity Audit</a>
+      </p>
+    </div>
+  </div>
 </div>
