--- a/nailgun/static/templates/cluster/node_group.html
+++ b/nailgun/static/templates/cluster/node_group.html
@@ -1,6 +1,6 @@
 <div class="node-groups">
   <div class="row-fluid node-group-header">
-    <div class="span10"><h4><%- groupLabel %> (<%= nodes.length %>)</h4></div>
+    <div class="span10"><h4><%= groupLabel %> (<%= nodes.length %>)</h4></div>
     <div class="span2 select-all">
       <label><input type="checkbox" name="select-node-group" value="" />Select All</label>
     </div>
