--- a/nailgun/static/templates/support/page.html
+++ b/nailgun/static/templates/support/page.html
@@ -46,15 +46,25 @@
         If you have encountered some bugs or errors while using Fuel, you may also need to provide the support team with Fuel logs. You can download them by clicking the button below.
       </p>
       <p>
-         <button class="btn download-logs-progress disabled"><span class="icon-process animate-spin"></span>Loading...</button>
-         <button class="btn download-logs hide">Generate diagnostic snapshot</button>
-        <span class="genereate-logs hide">
-          <span class="icon-process animate-spin"></span>Generating logs snapshot
-        </span>
-        <span class="donwload-logs-link hide" style="margin-left: 10px;">
-          <a href="/"><i class="icon-install"></i>Diagnostic Snapshot</a>
-        </span>
-        <span class="error download-logs-error hide"></span>
+          <% var taskCompleted = !_.isUndefined(task) && task.get('progress') == 100; %>
+          
+          <% if (!loaded) { %>
+            <button class="btn download-logs-progress disabled"><span class="icon-process animate-spin"></span>Loading...</button>
+          <% } else { %>
+            <button class="btn download-logs">Generate diagnostic snapshot</button>
+          <% } %>
+
+          <button class="btn genereate-logs hide disabled"><span class="icon-process animate-spin"></span>Generating logs snapshot</button>
+          
+          <% if (taskCompleted && task.get('status') == 'ready') { %>
+          <span class="donwload-logs-link" style="margin-left: 10px;">
+            <a href="/"><i class="icon-install"></i>Diagnostic Snapshot</a>
+          </span>
+          <% } %>
+
+          <% if (taskCompleted && task.get('status') == 'error') { %>
+          <span class="error download-logs-error"></span>
+          <% } %>
       </p>
     </div>
   </div>
