Specifying net_segment_type for cluster in gui (network tab). Added span element to network_tab template, with value obtained from network tab model 'net_segment_type'. Style set to italics for now - probably something nicer would be appropriate. Closes-bug: PRD-2268
Change-Id: I08dc8df499f1ae261b8b4aa51599f990669e465c

--- a/nailgun/static/css/main.css
+++ b/nailgun/static/css/main.css
@@ -1560,6 +1560,10 @@ label.node-checkbox {
   height: 16px;
 }
 
+.network-segment-type{
+  font-style: italic;
+}
+
 .network-tab-content .btn-group {
   margin: 7px 0 5px 0;
 }
