--- a/nailgun/static/templates/cluster/network_tab.html
+++ b/nailgun/static/templates/cluster/network_tab.html
@@ -20,6 +20,8 @@
         <% }) %>
       </div>
       <hr>
+    <% } else { %>
+      <span class="network-segment-type">Neutron with <%= segment_type %> segmentation</span>
     <% } %>
     <div class="networks-table"></div>
     <div class="nova-nameservers"></div>
