Don't fetch all tasks to get LogDump task status
Change-Id: I2d2c4229cd0b8cba548f9fd128fcd0804313fe3e

--- a/nailgun/static/templates/support/page.html
+++ b/nailgun/static/templates/support/page.html
@@ -48,8 +48,8 @@
         If you have encountered some bugs or errors while using Fuel, you may also need to provide the support team with Fuel logs. You can download them by clicking the button below.
       </p>
       <p>
-          <%  var task = this.logsPackageTasks.findTask({name: 'dump'});
-              var taskCompleted = !_.isUndefined(task) && task.get('progress') == 100;
+          <%
+              var taskCompleted = task && task.get('progress') == 100;
           %>
 
           <% if (!_.isNull(tasks.deferred)) { %>
