Added data bindig for Releases tab
Change-Id: I57d7b8630b75fd64591f529f0f5632c7cfce350c

--- a/nailgun/static/css/main.css
+++ b/nailgun/static/css/main.css
@@ -4026,7 +4026,7 @@ div.create-cluster-form .radio-checkbox-group label {
   width: 170px;
 }
 
-.download_progress .progress {
+.release-download-progress .progress {
   background-image: linear-gradient(to bottom, #435267, #aaaaaa);
   background-image: -webkit-linear-gradient(top, #435267, #aaaaaa);
   background-image: -moz-linear-gradient(top, #435267, #aaaaaa);
