--- a/nailgun/static/css/main.css
+++ b/nailgun/static/css/main.css
@@ -656,7 +656,9 @@ label.node-checkbox {
 
 .node-name > .name input {
   font-size: 12px;
-  height: 11px;
+  margin: 0px;
+  height: 18px;
+  padding: 0px 6px 0px 6px;
 }
 
 .nodes-management-panel > .cluster-actions {
@@ -1625,7 +1627,7 @@ label.node-checkbox {
 }
 
 input.vlan-tagging {
-  width: 176px;
+  width: 172px;
 }
 
 .networks-table .range-row, .neutron-parameters .range-row {
