[DO NOT MERGE] Stickit implementation for the Node view: status and roles
Change-Id: I510405ccac275333ddf40ab8faf2c3dfc47913d4

--- a/nailgun/static/css/main.css
+++ b/nailgun/static/css/main.css
@@ -329,24 +329,6 @@ h6.page-title {
   margin-top: 0px;
 }
 
-.roles-action-link {
-  padding-top: 8px;
-}
-
-.roles-action-link button.disabled {
-  color: #999999;
-  opacity: 1;
-  background-color: transparent;
-}
-
-.roles-action-link button:hover {
-  text-decoration: none;
-}
-
-.roles-action-link button.disabled:hover {
-  color: #999999;
-}
-
 /* White Box for Cluster content*/
 .whitebox {
   display: block;
@@ -528,7 +510,8 @@ label.node-checkbox {
   height: 50px;
   display: block;
 }
-.roles {
+
+.role-list {
   cursor: default;
   display: block;
   height: 18px;
@@ -536,65 +519,38 @@ label.node-checkbox {
   margin: 0;
   padding: 0;
   margin-top: -2px;
+  color: #666666;
 }
-.roles > ul {
+.role-list > ul {
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
   margin: 0px;
   padding: 0px;
   font-size: 10px;
   text-transform: uppercase;
   margin-top: 1px;
+  float: left;
   -webkit-font-smoothing: antialiased;
-  color: #666666;
 }
-.roles > ul > li {
+.role-list > ul > li {
   display: inline-block;
   float: left;
   margin-right: 3px;
 }
-.roles > ul > li:after {
+.role-list > ul > li:after {
   margin-left: 3px;
   font-weight: 600;
   content: '·';
 }
-.roles > ul > li:last-child:after {
+.role-list > ul > li:last-child:after {
   margin-left: 3px;
   font-weight: 600;
   content: ' ';
 }
-
-.node-status {
-  width: 145px;
-  height: 20px;
-  display: block;
-  overflow: hidden;
-  float: right;
-  text-transform: uppercase;
-  font-size: 10px;
-  margin: 14px 20px 0px 20px;
-  position: relative;
-  cursor: default;
+.role-list > .pending-roles li {
+  color: #468847;
 }
-.node-status > .progress {
-  background-color: #b9bdbf;
-  background-image: none;
-  border-radius: 3px 3px 3px 3px;
-  height: 15px;
-  margin-top: 3px;
-}
-.node-status > .progress > .bar {
-  border-radius: 3px 3px 3px 3px;
-  height: 13px;
-  margin: 1px;
-}
-.node-status > .progress > .bar > p {
-  color: #FFFFFF;
-  font-size: 10px;
-  line-height: 20px;
-  letter-spacing: 0px;
-  margin: -4px 0 0 4px;
-  text-align: left;
-  text-shadow: none;
+.add-nodes-screen .role-list > .pending-roles:empty::before {
+  content: 'unallocated';
 }
 
 .node-button {
@@ -858,96 +814,48 @@ label.node-checkbox {
   border-bottom: 1px dotted #b0b0b0;
 }
 
-.roles .pending {
-  color: #468847;
-}
-
 .node-status i {
-  font-size: 12px;
+  font-size: 11px;
 }
-
-.node-status .logs-link, .node-status .btn-discard-node-changes {
-    display: block;
-    height: 25px;
-    color: #2c67a0 !important;
-    font-size: 9.5px !important;
-    text-transform: uppercase;
-}
-
-.node-status .btn-discard-node-changes {
-    padding: 0;
-}
-
-.breaker {
-  margin: 0px 20px 20px 20px;
-}
-
-.node-status > .msg-offline,
-.node-status > .msg-discover {
-    display: block;
-    height: 25px;
-    font-size: 9.5px;
-    text-transform: uppercase;
-}
-
-.node-status > .msg-warning,
-.node-status > .msg-ok,
-.node-status > .msg-provisioned,
-.node-status > .msg-error {
-    display: block;
-    height: 25px;
-    color: #B44200;
-    font-size: 9.5px;
-    text-transform: uppercase;
-}
-
-.node-status > .msg-warning > i,
-.node-status > .msg-ok > i,
-.node-status > .msg-provisioned > i,
-.node-status > .msg-error > i,
-.node-status > .logs-link > i {
-    font-size: 11px;
-}
-
-.checktoinstall {
+.node-status {
   display: block;
-  background-color: rgba(0, 100, 38, 0.25);
-  width: 172px;
-  height: 86px;
-  float: left;
-  margin-left: -172px;
-  border-radius: 4px;
-  line-height: 52px;
-  font-size: 50px;
-  cursor: pointer;
+  height: 25px;
+  font-size: 9.5px;
+  text-transform: uppercase;
+  width: 145px;
+  overflow: hidden;
+  float: right;
+  margin: 14px 20px 0px 20px;
+  position: relative;
+  cursor: default;
 }
-.checktoinstall > i {
-  margin: 0px 0px 0px 60px;
-  color: rgba(255, 255, 255, 0.65);
+.node-status .progress {
+  background-color: #b9bdbf;
+  background-image: none;
+  border-radius: 3px 3px 3px 3px;
+  height: 15px;
+  margin-top: 3px;
 }
-.checktodelete {
-  display: block;
-  background-color: rgba(121, 0, 0, 0.25);
-  width: 172px;
-  height: 86px;
-  float: left;
-  margin-left: -172px;
-  border-radius: 4px;
-  line-height: 52px;
-  font-size: 50px;
-  cursor: pointer;
+.node-status .progress > .bar {
+  border-radius: 3px 3px 3px 3px;
+  height: 13px;
+  margin: 1px;
 }
-.checktodelete > i {
-  margin: 0px 0px 0px 60px;
-  color: rgba(255, 255, 255, 0.65);
+.node-status .progress > .bar > p {
+  color: #FFFFFF;
+  font-size: 10px;
+  line-height: 20px;
+  letter-spacing: 0px;
+  margin: -4px 0 0 4px;
+  text-align: left;
+  text-shadow: none;
 }
-
-.node-status > .msg-ok {color: #17824b;}
-.node-status > .msg-info {color: #4794cf;}
-.node-status > .msg-error {color: #8b0000;}
-.node-status > .msg-warning {color: #b44200;}
-.node-status > .msg-unimportant {color: #888888;}
-.node-status > .msg-provisioned {color: #0088cc;}
+.node-status .msg-ok {color: #17824b;}
+.node-status .msg-info {color: #4794cf;}
+.node-status .msg-error {color: #8b0000;}
+.node-status .msg-warning {color: #b44200;}
+.node-status .msg-unimportant {color: #888888;}
+.node-status .msg-provisioned {color: #0088cc;}
 
 .manufacturer-hp {
   background: url(../img/node_manufacturer_logos.png) 0px 0px no-repeat;
