--- a/nailgun/static/templates/cluster/node.html
+++ b/nailgun/static/templates/cluster/node.html
@@ -19,7 +19,11 @@
       <li>RAM: <%= node.resource('ram') ? showMemorySize(node.resource('ram')) : '?GB' %></li>
       </ul>
     </div>
-    <div class="node-status"></div>
+    <div class="node-status">
+      <div class="progress"><div class="bar"></div></div>
+      <i></i>
+      <span class="node-status-label"></span>
+    </div>
     <div class="node-button">
       <% if (!locked && !edit && node.get('cluster') && (node.get('pending_addition') || node.canDiscardDeletion() || node.get('pending_roles').length)) { %>
         <% var btnClass = node.get('pending_addition') ? 'addition' : node.get('pending_deletion') ? 'deletion' : 'role-changes' %>
@@ -37,7 +41,10 @@
           <p <%= renameable ? 'class="node-renameable"  title="Edit Name"' : '' %>><%- node.get('name') || node.get('mac') %></p>
         <% } %>
       </div>
-      <div class="roles"></div>
+      <div class="role-list">
+        <ul class="roles"></ul>
+        <ul class="pending-roles"></ul>
+      </div>
     </div>
   </div>
   <label class="node-checkbox">
@@ -48,4 +55,3 @@
     </div>
   </label>
 </div>
-
