fixing number of nides ui error  css changes - min-width property added
Change-Id: Ia31e4487b5129d2a37ff269f363b70e96f0f1178

--- a/nailgun/static/css/main.css
+++ b/nailgun/static/css/main.css
@@ -2753,6 +2753,7 @@ input.vlan-tagging {
   margin-top: -1px;
   line-height: 26px;
   padding-right: 1px;
+  min-width: 15px;
 }
 
 .statistic .stat-title {
