--- a/nailgun/static/templates/common/nodes_stats.html
+++ b/nailgun/static/templates/common/nodes_stats.html
@@ -1,6 +1,6 @@
 <div class="statistic">
-  <div class="stat-count total-nodes-count"></div>
-  <div class="stat-title total-nodes-title"></div>
-  <div class="stat-count unallocated-nodes-count"></div>
-  <div class="stat-title unallocated-nodes-title"></div>
+  <div class="stat-count total-nodes-count">{stats:total}</div>
+  <div class="stat-title total-nodes-title">total<br>nodes</div>
+  <div class="stat-count unallocated-nodes-count">{stats:unallocated}</div>
+  <div class="stat-title unallocated-nodes-title">unallocated<br>nodes</div>
 </div>
