Initial rivets setup
Added declaration-style for rivets templates

Relates to: PRD-2506

Change-Id: I295006c95074bc3834217a0948f259007e72b64e

--- a/nailgun/static/templates/common/nodes_stats.html
+++ b/nailgun/static/templates/common/nodes_stats.html
@@ -1,6 +1,12 @@
 <div class="statistic">
-  <div class="stat-count total-nodes-count"></div>
-  <div class="stat-title total-nodes-title"></div>
-  <div class="stat-count unallocated-nodes-count"></div>
-  <div class="stat-title unallocated-nodes-title"></div>
+  <div class="stat-count total-nodes-count" rv-text="stats:total">
+  </div>
+  <div class="stat-title total-nodes-title">
+      total<br>nodes
+  </div>
+  <div class="stat-count unallocated-nodes-count" rv-text="stats:unallocated">
+  </div>
+  <div class="stat-title unallocated-nodes-title">
+      unallocated<br/>node
+  </div>
 </div>
