Enabling Neutron+vlan for Rhos
changed error message.
fixed disabling selector

Change-Id: Iaba2286ce8e35a851b21104bddbbc4bc451a1880

--- a/nailgun/static/templates/dialogs/create_cluster_wizard/network.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/network.html
@@ -1,5 +1,5 @@
 <% if (disabled && release) { %>
-  <div class="alert" style="margin:0">Neutron is not supported in <%- release.get('name') %></div>
+  <div class="alert" style="margin:0">Neutron with GRE segmentation is not supported in <%- release.get('name') %></div>
 <% } %>
 <form class="form-horizontal" onsubmit="return false">
   <fieldset>
