Validation for nodes configure disks screen
Added validations & stickit bindings

Change-Id: Ib549b20f9ee329277ba2ff83e594825c3c2efabb
Relates-to: #PRD-2273

--- a/nailgun/static/templates/cluster/node_interface.html
+++ b/nailgun/static/templates/cluster/node_interface.html
@@ -1,5 +1,5 @@
 <!-- network block start -->
-<div class="physical-network-box">
+<div class="physical-network-box" data-name="<%- ifc.get('name') %>">
   <div class="network-box-name"><%- ifc.get('name') %></div>
   <div class="network-box-item">
 
@@ -35,3 +35,4 @@
   </div>
 </div>
 <!-- network block end -->
+<div class="network-box-error-message common enable-selection"></div>
