Validation for nodes configure disks screen
Added validations

Change-Id: Ib549b20f9ee329277ba2ff83e594825c3c2efabb
Relates-to: #PRD-2273

--- a/nailgun/static/css/main.css
+++ b/nailgun/static/css/main.css
@@ -3918,6 +3918,7 @@ hr.slim {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
 }
 
+.network-box-error-message,
 .volume-group-error-message {
   display: block;
   overflow: hidden;
