--- a/nailgun/static/templates/cluster/network.html
+++ b/nailgun/static/templates/cluster/network.html
@@ -100,7 +100,7 @@
           <div class="parameter-control <%- attribute %>">
             <select name="<%- networkName %>-<%- attribute %>" <%= disabled %>>
               <% _.each([8, 16, 32, 64, 128, 256, 512, 1024, 2048], function(size) { %>
-                <option value="<%= size %>" <%= network.get('network_size') == size ? 'selected' : '' %>><%= size %></option>
+                <option value="<%= size %>" <%= (size == 256 || network.get('network_size') == size) ? 'selected' : '' %>><%= size %></option>
               <% }) %>
             </select>
           </div>
