--- a/nailgun/static/css/fonticon.css
+++ b/nailgun/static/css/fonticon.css
@@ -2,11 +2,11 @@
 
  @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?69783197');
-  src: url('../font/fontello.eot?69783197#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?69783197') format('woff'),
-       url('../font/fontello.ttf?69783197') format('truetype'),
-       url('../font/fontello.svg?69783197#fontello') format('svg');
+  src: url('../font/fontello.eot?3862811');
+  src: url('../font/fontello.eot?3862811#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?3862811') format('woff'),
+       url('../font/fontello.ttf?3862811') format('truetype'),
+       url('../font/fontello.svg?3862811#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -16,73 +16,93 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?69783197#fontello') format('svg');
+    src: url('../font/fontello.svg?3862811#fontello') format('svg');
   }
 }
 */
-
+ 
  [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
   speak: none;
-
+ 
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
   margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
-
+ 
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
-
+     
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
-
+ 
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
   margin-left: .2em;
-
+ 
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
-
+ 
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
-
-.icon-skip-test:before { content: '\e807'; } /* '' */
-.icon-block:before { content: '\1f6ab'; } /* '🚫' */
+ 
+.icon-mirantis:before { content: '\e803'; } /* '' */
+.icon-block:before { content: '🚫'; } /* '\1f6ab' */
+.icon-dell:before { content: '\e808'; } /* '' */
+.icon-cisco:before { content: '\e809'; } /* '' */
+.icon-hp:before { content: '\e81c'; } /* '' */
+.icon-virtualbox:before { content: '\e80a'; } /* '' */
+.icon-supermicro:before { content: '\e80b'; } /* '' */
+.icon-vm-logo:before { content: '\e80d'; } /* '' */
+.icon-openvz:before { content: '\e80c'; } /* '' */
+.icon-xen:before { content: '\e80e'; } /* '' */
+.icon-kvm:before { content: '\e80f'; } /* '' */
+.icon-qemu:before { content: '\e810'; } /* '' */
+.icon-redhat:before { content: '\e81b'; } /* '' */
+.icon-centos:before { content: '\e811'; } /* '' */
+.icon-ubuntu:before { content: '\e812'; } /* '' */
+.icon-create:before { content: '\e814'; } /* '' */
+.icon-loader:before { content: '\e815'; } /* '' */
+.icon-next:before { content: '\e816'; } /* '' */
+.icon-prev:before { content: '\e817'; } /* '' */
+.icon-edit:before { content: '\e819'; } /* '' */
+.icon-plus:before { content: '\e81a'; } /* '' */
+.icon-network:before { content: '\e813'; } /* '' */
+.icon-process:before { content: '\e81d'; } /* '' */
 .icon-ok-circle-empty:before { content: '\e702'; } /* '' */
 .icon-cancel-empty:before { content: '\e703'; } /* '' */
 .icon-eye:before { content: '\e806'; } /* '' */
 .icon-eye-off:before { content: '\e805'; } /* '' */
-.icon-passed:before { content: '\e801'; } /* '' */
+.icon-skip-test:before { content: '\e807'; } /* '' */
 .icon-failed:before { content: '\e802'; } /* '' */
-.icon-edit:before { content: '\270e'; } /* '✎' */
 .icon-clock-1:before { content: '\e804'; } /* '' */
 .icon-arrows-cw:before { content: '\e760'; } /* '' */
-.icon-user:before { content: '\1f464'; } /* '👤' */
+.icon-user:before { content: '👤'; } /* '\1f464' */
 .icon-expand:before { content: '\229e'; } /* '⊞' */
 .icon-collapse:before { content: '\229f'; } /* '⊟' */
 .icon-help-circled:before { content: '\e704'; } /* '' */
 .icon-info-circled:before { content: '\e705'; } /* '' */
 .icon-upload-cloud:before { content: '\e711'; } /* '' */
-.icon-process:before { content: '\e803'; } /* '' */
-.icon-bell:before { content: '\1f514'; } /* '🔔' */
+.icon-comment:before { content: '\e718'; } /* '' */
+.icon-bell:before { content: '🔔'; } /* '\1f514' */
 .icon-attention:before { content: '\26a0'; } /* '⚠' */
+.icon-trash:before { content: '\e818'; } /* '' */
 .icon-back-in-time:before { content: '\e771'; } /* '' */
 .icon-install:before { content: '\e778'; } /* '' */
 .icon-ok:before { content: '\2713'; } /* '✓' */
 .icon-ok-circle:before { content: '\2714'; } /* '✔' */
 .icon-cancel:before { content: '\2715'; } /* '✕' */
 .icon-cancel-circle:before { content: '\e800'; } /* '' */
-.icon-plus:before { content: '\2b'; } /* '+' */
 .icon-plus-circle:before { content: '\2795'; } /* '➕' */
 .icon-minus:before { content: '\2d'; } /* '-' */
 .icon-minus-circle:before { content: '\2796'; } /* '➖' */
 .icon-logs:before { content: '\e730'; } /* '' */
 .icon-settings:before { content: '\2699'; } /* '⚙' */
-.icon-clock:before { content: '\1f554'; } /* '🕔' */
-.icon-comment:before { content: '\e718'; } /* '' */
+.icon-clock:before { content: '🕔'; } /* '\1f554' */
+.icon-passed:before { content: '\e801'; } /* '' */
