--- a/nailgun/static/templates/cluster/healthcheck_testset.html
+++ b/nailgun/static/templates/cluster/healthcheck_testset.html
@@ -13,9 +13,9 @@
             <div class="parameter-name" style="cursor: pointer"><%- testset.get('name') %></div>
           </label>
         </th>
-        <th class="healthcheck-col-duration">Expected Duration</th>
-        <th class="healthcheck-col-duration">Actual Duration</th>
-        <th class="healthcheck-col-status">Status</th>
+        <th class="healthcheck-col-duration" data-i18n="cluster_page.healthcheck_tab.expected_duration">Expected Duration</th>
+        <th class="healthcheck-col-duration" data-i18n="cluster_page.healthcheck_tab.actual_duration">Actual Duration</th>
+        <th class="healthcheck-col-status" data-i18n="cluster_page.healthcheck_tab.status">Status</th>
       </tr>
     </thead>
     <tbody></tbody>
