localization for add new cluster wizard
Relates-to: "Implement localization for Fuel application"

Change-Id: Id5aeb599a3e7d0319a3b4c4b53ae64d5eca20a66
Closes-Bug: "Localization for add cluster wizard"

--- a/nailgun/static/templates/dialogs/create_cluster_wizard/additional.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/additional.html
@@ -1,5 +1,6 @@
 <% if (disabled && release) { %>
-  <div class="alert" style="margin-bottom: 10px">Additional services are not available in <%- release.get('name') %></div>
+  <div class="alert" style="margin-bottom: 10px">
+      <span data-i18n="dialog.create_cluster_wizard.additional_services_alert"></span> <%- release.get('name') %></div>
 <% } %>
 <form class="form-horizontal" style="margin:0" onsubmit="return false">
   <fieldset>
