--- a/nailgun/static/templates/dialogs/create_cluster_wizard/name_and_release.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/name_and_release.html
@@ -1,14 +1,14 @@
 <form class="form-horizontal create-cluster-form" onsubmit="return false">
   <fieldset>
     <div class="control-group">
-      <label class="control-label">Name</label>
+      <label class="control-label" data-i18n="dialog.create_cluster_wizard.lbl-name"></label>
       <div class="controls">
         <input type="text" class="input-large" name="name" maxlength="50" autofocus />
         <span class="help-inline"></span>
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label">OpenStack Release</label>
+      <label class="control-label" data-i18n="dialog.create_cluster_wizard.lbl-release"></label>
       <div class="controls">
         <select name="release"></select>
       </div>
@@ -18,7 +18,6 @@
 </form>
 
 <div class="credentials rhel-license hide"></div>
-<div class="alert alert-info rhel-license hide">
-  To deploy Red Hat OpenStack, you must first download both RHOS and RHEL to be cached on the Fuel master node.  You can do this from the Releases page or just choose your subscription type and enter your credentials below.  RHEL and RHOS will be automatically downloaded and cached after you create the environment.
+<div class="alert alert-info rhel-license hide" data-i18n="dialog.create_cluster_wizard.red_hat_info">
 </div>
 
