--- a/nailgun/static/templates/dialogs/create_cluster_wizard/ready.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/ready.html
@@ -1,2 +1,8 @@
-Your environment is now ready for deployment!
-You can select <b>Deploy Changes</b> or make additional configuration choices in the Fuel <b>Environments</b> console.
+<p>
+    <span data-i18n="dialog.create_cluster_wizard.ready_env_select_deploy"></span>
+    <b data-i18n="dialog.create_cluster_wizard.ready_deploy"></b>
+    <span data-i18n="dialog.create_cluster_wizard.ready_or_make_config_choice"></span>
+    <b data-i18n="dialog.create_cluster_wizard.ready_env"></b>
+    <span data-i18n="dialog.create_cluster_wizard.ready_console"></span>
+</p>
+
