--- a/nailgun/static/templates/dialogs/create_cluster_wizard/additional.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/additional.html
@@ -1,5 +1,7 @@
 <% if (disabled && release) { %>
-  <div class="alert" style="margin-bottom: 10px">Additional services are not available in <%- release.get('name') %></div>
+  <div class="alert" style="margin-bottom: 10px">
+      <%- $.t("dialog.create_cluster_wizard.additional_services_alert", { releaseName: release.get('name')} ) %>
+  </div>
 <% } %>
 <form class="form-horizontal" style="margin:0" onsubmit="return false">
   <fieldset>
