--- a/nailgun/static/templates/dialogs/create_cluster_wizard/network.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/network.html
@@ -1,5 +1,7 @@
 <% if (disabled && release) { %>
-  <div class="alert" style="margin:0">Neutron is not supported in <%- release.get('name') %></div>
+  <div class="alert" style="margin:0">
+      <%- $.t("dialog.create_cluster_wizard.network_alert", { releaseName: release.get('name')} ) %>
+  </div>
 <% } %>
 <form class="form-horizontal" onsubmit="return false">
   <fieldset>
