--- a/nailgun/static/templates/cluster/network.html
+++ b/nailgun/static/templates/cluster/network.html
@@ -2,19 +2,19 @@
 <% if (shownAttributes.length) { %>
 
   <% var networkName = network.get('name') %>
-  <legend class="networks"><%- networkName != 'fixed' ? $.t('cluster_page.network_tab.'+networkName, {defaultValue: networkName}) : $.t('cluster_page.network_tab.vm_networks_fixed', {defaultValue: 'VM Networks (Fixed)'}) %></legend>
+  <legend class="networks"><%- networkName != 'fixed' ? $.t('cluster_page.network_tab.nova_network.'+networkName) : $.t('cluster_page.network_tab.nova_network.vm_networks_fixed') %></legend>
 
   <% var disabled = locked ? 'disabled' : '' %>
   <% var vlanManager = net_manager == 'VlanManager' ? '' : 'hide' %>
   <% var labels = {
-    'ip_ranges': $.t('cluster_page.network_tab.ip_range', {defaultValue: 'IP Range'}),
-    'vlan_start': $.t('cluster_page.network_tab.vlan_id', {defaultValue: 'VLAN ID'}),
-    'netmask': $.t('cluster_page.network_tab.netmask', {defaultValue: 'Netmask'}),
-    'gateway': $.t('cluster_page.network_tab.gateway', {defaultValue: 'Gateway'}),
-    'cidr': $.t('cluster_page.network_tab.cidr', {defaultValue: 'CIDR'}),
-    'amount': $.t('cluster_page.network_tab.nubmer_of_networks', {defaultValue: 'Number of Networks'}),
-    'network_size': $.t('cluster_page.network_tab.size_of_networks', {defaultValue: 'Size of Networks'}),
-    'vlan_range': $.t('cluster_page.network_tab.vlan_id_range', {defaultValue: 'VLAN ID range'})
+    'ip_ranges': $.t('cluster_page.network_tab.nova_network.ip_range'),
+    'vlan_start': $.t('cluster_page.network_tab.nova_network.vlan_id'),
+    'netmask': $.t('cluster_page.network_tab.nova_network.netmask'),
+    'gateway': $.t('cluster_page.network_tab.nova_network.gateway'),
+    'cidr': $.t('cluster_page.network_tab.nova_network.cidr'),
+    'amount': $.t('cluster_page.network_tab.nova_network.nubmer_of_networks'),
+    'network_size': $.t('cluster_page.network_tab.nova_network.size_of_networks'),
+    'vlan_range': $.t('cluster_page.network_tab.nova_network.vlan_id_range')
   } %>
 
   <div data-network-id="<%- network.id %>" class="<%- networkName %>">
@@ -24,8 +24,8 @@
       <% var hidden = _.contains(shownAttributes, attribute) ? '' : 'hide' %>
       <% if (attribute == 'ip_ranges') { %>
         <div class="range-row-header <%= hidden %>">
-          <div data-i18n="cluster_page.network_tab.start">Start</div>
-          <div data-i18n="cluster_page.network_tab.end">End</div>
+          <div data-i18n="cluster_page.network_tab.start"></div>
+          <div data-i18n="cluster_page.network_tab.end"></div>
         </div>
         <div class="networks-sub-title parameter-name range-name <%= hidden %>"><%= labels[attribute] %></div>
         <% _.each(network.get(attribute), function(ip_range) { %>
@@ -78,7 +78,7 @@
         <% } else { %>
           <% var vlan = network.get(attribute) %>
           <% var isFloating = networkName == 'floating' ? 'disabled' : '' %>
-          <div class="networks-sub-title parameter-name" data-i18n="cluster_page.network_tab.use_vlan_tagging">Use VLAN Tagging</div>
+          <div class="networks-sub-title parameter-name" data-i18n="cluster_page.network_tab.nova_network.use_vlan_tagging"></div>
           <div class="range-row clearfix" style="height: 40px">
             <label class="parameter-box clearfix setting">
               <div class="parameter-control">
