--- a/nailgun/static/templates/cluster/node.html
+++ b/nailgun/static/templates/cluster/node.html
@@ -34,8 +34,7 @@
     </div>
     <label class="node-checkbox">
       <div class="custom-tumbler">
-        <% var disabledNode = ((!node.get('online') || node.get('status') == 'error') && !node.get('cluster')) || node.get('pending_deletion') || edit || locked %>
-        <input type="checkbox" value="<%- node.id %>" <%= disabledNode ? 'disabled' : '' %> />
+        <input type="checkbox" value="<%- node.id %>" />
         <!-- [if !IE |(gte IE 9)]> --><span>&nbsp;</span><!-- <![endif] -->
       </div>
     </label>
