--- a/nailgun/static/templates/cluster/node.html
+++ b/nailgun/static/templates/cluster/node.html
@@ -26,16 +26,12 @@
             <p class="<%= renameable ? 'node-renameable' : '' %>" title="<%- renameable ? $.t('cluster_page.nodes_tab.node.edit_name') : '' %>"><%- node.get('name') || node.get('mac') %></p>
           <% } %>
         </div>
-        <div class="role-list">
-          <ul class="roles"></ul>
-          <ul class="pending-roles"></ul>
-        </div>
+        <div class="role-list"></div>
       </div>
     </div>
     <label class="node-checkbox">
       <div class="custom-tumbler">
-        <% var disabledNode = ((!node.get('online') || node.get('status') == 'error') && !node.get('cluster')) || node.get('pending_deletion') || edit || locked %>
-        <input type="checkbox" value="<%- node.id %>" <%= disabledNode ? 'disabled' : '' %> />
+        <input type="checkbox" />
         <!-- [if !IE |(gte IE 9)]> --><span>&nbsp;</span><!-- <![endif] -->
       </div>
     </label>
