Stickit for Nodes tab
Change-Id: I7467e077c277626ae7c7fc3edb9139dd104e549b

--- a/nailgun/static/css/main.css
+++ b/nailgun/static/css/main.css
@@ -559,7 +559,8 @@ label.node-checkbox {
 .role-list > .pending-roles li {
   color: #468847;
 }
-.add-nodes-screen .role-list > .pending-roles:empty::before {
+.add-nodes-screen .role-list > .pending-roles:empty::before,
+.edit-nodes-screen .role-list > .pending-roles:empty::before{
   content: 'unallocated';
 }
 
