Data-binding for nodes management buttons
Change-Id: I2d5bcc6d65f356ec1ad6635b56792eb89562811b

--- a/nailgun/static/templates/cluster/actions_tab.html
+++ b/nailgun/static/templates/cluster/actions_tab.html
@@ -19,7 +19,7 @@
         <div class="action-item-description important" data-i18n="cluster_page.actions_tab.alert_delete">
         </div>
         <div class="action-item-controls">
-          <button class="btn btn-danger delete-cluster-btn" data-i18n="cluster_page.actions_tab.bt_delete"></button>
+          <button class="btn btn-danger delete-cluster-btn" data-i18n="common.delete_label"></button>
         </div>
       </form>
     </div>
