--- a/nailgun/static/templates/dialogs/show_node.html
+++ b/nailgun/static/templates/dialogs/show_node.html
@@ -77,8 +77,8 @@
     <button class="btn btn-node-console" data-i18n="dialog.show_node.ssh_console"></button>
   <% } %>
   <% if (node.get('cluster') && !locked) { %>
-    <button class="btn btn-edit-networks" data-dismiss="modal" data-i18n="dialog.show_node.network_configuration_button"></button>
-    <button class="btn btn-edit-disks" data-dismiss="modal" data-i18n="dialog.show_node.disk_configuration_button"></button>
+    <button class="btn btn-edit-networks" data-dismiss="modal" data-i18n="cluster_page.nodes_tab.network_configuration_button"></button>
+    <button class="btn btn-edit-disks" data-dismiss="modal" data-i18n="cluster_page.nodes_tab.disk_configuration_button"></button>
   <% } %>
   <button class="btn node-modal-close" data-dismiss="modal" data-i18n="dialog.show_node.close_button"></button>
 </div>
