--- a/nailgun/static/templates/cluster/nodes_management_panel.html
+++ b/nailgun/static/templates/cluster/nodes_management_panel.html
@@ -15,20 +15,19 @@
   </div>
   <% if (clusterNodesScreen) { %>
     <div class="cluster-toolbar-item pull-right">
-      <button class="btn btn-danger btn-delete-nodes hide"><i class="icon-trash"></i> Delete</button>
-    </div>
-    <% var disabled = nodes.cluster.task('deploy', 'running') ? 'disabled' : '' %>
-    <div class="cluster-toolbar-item pull-right">
-      <a class="btn btn-success btn-edit-nodes hide" data-action="edit" href="" <%= disabled %>><i class="icon-edit"></i> Edit Roles</a>
+      <button class="btn btn-danger btn-delete-nodes"><i class="icon-trash"></i> Delete</button>
     </div>
     <div class="cluster-toolbar-item pull-right">
-      <<%= locked ? 'div' : 'a' %> class="btn btn-success btn-add-nodes" href="#cluster/<%- cluster.id %>/nodes/add" <%= disabled %>><i class="icon-plus"></i> Add Nodes</<%= locked ? 'div' : 'a' %>>
+      <a class="btn btn-success btn-edit-nodes hide" data-action="edit" href="" ><i class="icon-edit"></i> Edit Roles</a>
     </div>
     <div class="cluster-toolbar-item pull-right">
-      <button class="btn btn-group-congiration btn-configure-interfaces" disabled data-action="interfaces"><i class="icon-attention text-error hide"></i> <span data-i18n="cluster_page.nodes_tab.bt_network_configuration">Configure Interfaces</span></button>
+      <button class="btn btn-success btn-add-nodes" href="#cluster/<%- cluster.id %>/nodes/add" ><i class="icon-plus"></i>Add Nodes</button>
     </div>
     <div class="cluster-toolbar-item pull-right">
-      <button class="btn btn-group-congiration btn-configure-disks" disabled data-action="disks"><i class="icon-attention text-error hide"></i> <span data-dismiss="modal" data-i18n="cluster_page.nodes_tab.bt_disk_configuration">Configure Disks</span></button>
+      <button class="btn btn-group-congiration btn-configure-interfaces" data-action="interfaces"><i class="icon-attention text-error hide"></i> <span data-i18n="cluster_page.nodes_tab.bt_network_configuration">Configure Interfaces</span></button>
+    </div>
+    <div class="cluster-toolbar-item pull-right">
+      <button class="btn btn-group-congiration btn-configure-disks" data-action="disks"><i class="icon-attention text-error hide"></i> <span data-dismiss="modal" data-i18n="cluster_page.nodes_tab.bt_disk_configuration">Configure Disks</span></button>
     </div>
   <% } else { %>
     <div class="cluster-toolbar-item pull-right">
