--- a/nailgun/static/templates/cluster/node_interface.html
+++ b/nailgun/static/templates/cluster/node_interface.html
@@ -2,12 +2,10 @@
 <div class="physical-network-box">
   <div class="network-box-name"><%- ifc.get('name') %></div>
   <div class="network-box-item">
-
-    <% var currentSpeed = showBandwidth(ifc.get('current_speed')); %>
     <div class="network-info-box enable-selection">
-      <div class="network-interfaces-status"><div class="interface-<%= currentSpeed !== 'N/A' ? 'online' : 'offline' %>"></div></div>
+      <div class="network-interfaces-status"><div class="interface-<%= ifc.get('state') !== 'down' ? 'online' : 'offline'%>"></div></div>
       <div>MAC: <%- ifc.get('mac') %></div>
-      <div><%- $.t('cluster_page.nodes_tab.speed', {defaultValue:'Speed:'}) %> <%- currentSpeed %></div>
+      <div><%- $.t('cluster_page.nodes_tab.speed', {defaultValue:'Speed:'}) %> <%- showBandwidth(ifc.get('current_speed')) %></div>
     </div>
 
     <div class="logical-network-box">
