editing localization to code guidelines
Relates-to: "Implement localization for Fuel application"

Change-Id: I893b637a1ab85758281a6c60728c46e03fa627a6
Closes-Bug: "Fix existing localizations to suite our coding standarts "

--- a/nailgun/static/templates/capacity/page.html
+++ b/nailgun/static/templates/capacity/page.html
@@ -112,7 +112,7 @@
 <% } else { %>
   <div class="row-fluid">
       <div class="span12" align="center">
-        <span class="icon-process animate-spin"></span><span data-i18n="capacity_page.loading"></span>
+        <span class="icon-process animate-spin"></span><span data-i18n="common.loading"></span>
       </div>
   </div>
 <% } %>
