--- a/nailgun/static/templates/cluster/healthcheck_tab.html
+++ b/nailgun/static/templates/cluster/healthcheck_tab.html
@@ -7,8 +7,8 @@
       </label>
     </div>
     <div class="span2">
-      <button class="btn btn-success pull-right action-btn run-tests-btn" data-i18n="cluster_page.healthcheck_tab.bt_run_tests" disabled>Run Tests</button>
-      <button class="btn btn-danger pull-right action-btn stop-tests-btn hide" data-i18n="cluster_page.healthcheck_tab.bt_stop_tests">Stop Tests</button>
+      <button class="btn btn-success pull-right action-btn run-tests-btn" data-i18n="cluster_page.healthcheck_tab.run_tests" disabled>Run Tests</button>
+      <button class="btn btn-danger pull-right action-btn stop-tests-btn hide" data-i18n="cluster_page.healthcheck_tab.stop_tests">Stop Tests</button>
     </div>
   </div>
   <% if (cluster.get('status') == 'new') { %>
