--- a/nailgun/static/templates/cluster/settings_tab.html
+++ b/nailgun/static/templates/cluster/settings_tab.html
@@ -19,8 +19,8 @@
   <div class="row">
     <div class="page-control-box">
       <div class="page-control-button-placeholder">
-        <button data-i18n="cluster_page.settings_tab.bt_load_defaults" class="btn btn-load-defaults"<%= locked || cluster.get('settings').deferred.state() == 'pending' ? ' disabled' : '' %>>Load Defaults</button>
-        <button data-i18n="cluster_page.settings_tab.bt_save_settings" data-i18n="cluster_page.settings_tab.bt_cancel_changes" class="btn btn-revert-changes" disabled>Cancel Changes</button>
+        <button data-i18n="cluster_page.settings_tab.load_defaults" class="btn btn-load-defaults"<%= locked || cluster.get('settings').deferred.state() == 'pending' ? ' disabled' : '' %>>Load Defaults</button>
+        <button data-i18n="cluster_page.settings_tab.save_settings" data-i18n="cluster_page.settings_tab.cancel_changes" class="btn btn-revert-changes" disabled>Cancel Changes</button>
         <button class="btn btn-success btn-apply-changes" disabled>Save Settings</button>
       </div>
     </div>
