--- a/nailgun/static/templates/dialogs/dismiss_settings.html
+++ b/nailgun/static/templates/dialogs/dismiss_settings.html
@@ -9,8 +9,8 @@
   </div>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-return" data-dismiss="modal" data-i18n="dialog.dismiss_settings.bt_stay">Stay on page</button>
+  <button class="btn btn-return" data-dismiss="modal" data-i18n="dialog.dismiss_settings.stay_button">Stay on page</button>
   <% if (!verification) { %>
-    <button class="btn btn-danger proceed-btn"data-i18n="dialog.dismiss_settings.bt_leave">Leave page and discard changes</button>
+    <button class="btn btn-danger proceed-btn"data-i18n="dialog.dismiss_settings.leave_button">Leave page and discard changes</button>
   <% } %>
 </div>
