--- a/nailgun/static/templates/support/page.html
+++ b/nailgun/static/templates/support/page.html
@@ -51,7 +51,7 @@
           %>
 
           <% if (!_.isNull(tasks.deferred)) { %>
-            <button class="btn download-logs-progress disabled" data-i18n="loading"></button>
+            <button class="btn download-logs-progress disabled" data-i18n="common.loading"></button>
           <% } else { %>
             <% if (!task || taskCompleted) { %>
             <button class="btn download-logs" data-i18n="support_page.gen_diagnostic_snapshot_text"></button>
