--- a/nailgun/static/templates/cluster/edit_node_disks.html
+++ b/nailgun/static/templates/cluster/edit_node_disks.html
@@ -14,12 +14,13 @@
   <div class="row">
     <div class="page-control-box">
       <div class="back-button pull-left">
-        <button class="btn btn-return" data-i18n="cluster_page.nodes_tab.bt_return">Back To Node List</button>
+        <button class="btn btn-return" data-i18n="cluster_page.nodes_tab.return_button">Back To Node List</button>
       </div>
       <div class="page-control-button-placeholder">
-        <button data-i18n="cluster_page.nodes_tab.bt_load_defaults" class="btn btn-defaults">Load Defaults</button>
-        <button data-i18n="cluster_page.nodes_tab.bt_cancel_changes" class="btn btn-revert-changes">Cancel Changes</button>
-        <button data-i18n="cluster_page.nodes_tab.bt_apply" class="btn btn-success btn-apply">Apply</button>
+        <button data-i18n="cluster_page.nodes_tab.load_defaults" class="btn btn-defaults">Load Defaults</button>
+        <button data-i18n="cluster_page.nodes_tab.cancel_changes" class="btn btn-revert-changes">Cancel Changes</button>
+        <button data-i18n="cluster_page.nodes_tab.apply" class="btn btn-success btn-apply">Apply</button>
       </div>
     </div>
   </div>
+</div>
