--- a/nailgun/static/templates/cluster/network_tab.html
+++ b/nailgun/static/templates/cluster/network_tab.html
@@ -45,9 +45,9 @@
   <div class="row">
     <div class="page-control-box">
       <div class="page-control-button-placeholder">
-        <button data-i18n="cluster_page.network_tab.bt_verify_networks" class="btn verify-networks-btn" <%= verificationLocked ? 'disabled' : '' %>>Verify Networks</button>
-        <button data-i18n="cluster_page.network_tab.bt_cancel_changes" class="btn btn-revert-changes" <%= locked || !hasChanges? 'disabled' : '' %>>Cancel Changes</button>
-        <button data-i18n="cluster_page.network_tab.bt_save_settings" class="btn btn-success apply-btn" <%= locked || !hasChanges ? 'disabled' : '' %>>Save Settings</button>
+        <button data-i18n="cluster_page.network_tab.verify_networks" class="btn verify-networks-btn" <%= verificationLocked ? 'disabled' : '' %>>Verify Networks</button>
+        <button data-i18n="cluster_page.network_tab.cancel_changes" class="btn btn-revert-changes" <%= locked || !hasChanges? 'disabled' : '' %>>Cancel Changes</button>
+        <button data-i18n="cluster_page.network_tab.save_settings" class="btn btn-success apply-btn" <%= locked || !hasChanges ? 'disabled' : '' %>>Save Settings</button>
       </div>
     </div>
   </div>
