[REVERT AFTER RELEASE]  HA, Murano and Ceph  disabling
As HA, Murano and Ceph do not work in tech-preview-4.0 version,
we disable them on UI for this techpreview release (grey them out, not remove from UI)

Edited templates

Change-Id: Ib7a85996168b841b1ab51abe149f6416b99d620f
Closes-Bug: "1250373 "

--- a/nailgun/static/templates/dialogs/create_cluster_wizard/additional.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/additional.html
@@ -19,7 +19,7 @@
         <label class="parameter-box clearfix">
           <div class="parameter-control">
             <div class="custom-tumbler">
-              <input type="checkbox" name="<%= service.name %>" />
+              <input type="checkbox" name="<%= service.name %>" <%- (service.name == 'murano') ? 'disabled' : '' %>/>
               <!-- [if !IE |(gte IE 9)]> --><span>&nbsp;</span><!-- <![endif] -->
             </div>
           </div>
