--- a/nailgun/static/templates/cluster/settings_group.html
+++ b/nailgun/static/templates/cluster/settings_group.html
@@ -9,7 +9,7 @@
       <label class="parameter-box clearfix">
         <div class="parameter-control">
           <div class="custom-tumbler">
-            <input type="checkbox" name="<%- settingName %>" <%= disabled %> />
+            <input type="checkbox" name="<%- settingName %>" <%= disabled %> <%- (settingName == 'murano' || settingName.indexOf("ceph") > 0) ? 'disabled' : '' %>/>
             <!-- [if !IE |(gte IE 9)]> --><span>&nbsp;</span><!-- <![endif] -->
           </div>
         </div>
