fixing cursor wrong form in ff
there are stil similiar bugs in chrome

Change-Id: Iaed24de7225616178296a709df742a1b29e7a633
Closes-bug: PRD-2460

--- a/nailgun/static/css/main.css
+++ b/nailgun/static/css/main.css
@@ -871,10 +871,10 @@ label.node-checkbox {
   height: 25px;
   font-size: 9.5px;
   text-transform: uppercase;
-  width: 145px;
+  width: auto;
   overflow: hidden;
   float: right;
-  margin: 14px 20px 0px 20px;
+  margin: 14px 120px 0px 20px;
   position: relative;
   cursor: default;
 }
