--- a/nailgun/static/templates/dialogs/create_cluster_wizard/storage.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/storage.html
@@ -10,7 +10,7 @@
           <label class="parameter-box clearfix">
             <div class="parameter-control">
               <div class="custom-tumbler">
-                <input type="radio" name="cinder" value="<%- backend.toLowerCase() %>" <%- (backend == 'Ceph') ? 'disabled' : '' %>/>
+                <input type="radio" name="cinder" value="<%- backend.toLowerCase() %>" />
                 <!-- [if !IE |(gte IE 9)]> --><span>&nbsp;</span><!-- <![endif] -->
               </div>
             </div>
@@ -28,7 +28,7 @@
           <label class="parameter-box clearfix">
             <div class="parameter-control">
               <div class="custom-tumbler">
-                <input type="radio" name="glance" value="<%- backend.toLowerCase() %>" <%- (backend == 'Ceph') ? 'disabled' : '' %>/>
+                <input type="radio" name="glance" value="<%- backend.toLowerCase() %>" />
                 <!-- [if !IE |(gte IE 9)]> --><span>&nbsp;</span><!-- <![endif] -->
               </div>
             </div>
