--- a/nailgun/static/templates/cluster/edit_node_disks.html
+++ b/nailgun/static/templates/cluster/edit_node_disks.html
@@ -1,5 +1,5 @@
 <div class="edit-node-disks wrapper">
-  <h3 class="span12">Configure disks on <%= nodes.length %> node<%= nodes.length == 1 ? '' : 's' %></h3>
+  <h3 class="span12"><span data-i18n="cluster_page.nodes_tab.edit_node_disks.configure_disks"></span> <%= nodes.length %> node<%= nodes.length == 1 ? '' : 's' %></h3>
 
   <div class="row node-disks">
     <div class="span4"></div>
@@ -14,12 +14,12 @@
   <div class="row">
     <div class="page-control-box">
       <div class="back-button pull-left">
-        <button class="btn btn-return" data-i18n="cluster_page.nodes_tab.bt_return">Back To Node List</button>
+        <button class="btn btn-return" data-i18n="cluster_page.nodes_tab.return_button"></button>
       </div>
       <div class="page-control-button-placeholder">
-        <button data-i18n="cluster_page.nodes_tab.bt_load_defaults" class="btn btn-defaults">Load Defaults</button>
-        <button data-i18n="cluster_page.nodes_tab.bt_cancel_changes" class="btn btn-revert-changes">Cancel Changes</button>
-        <button data-i18n="cluster_page.nodes_tab.bt_apply" class="btn btn-success btn-apply">Apply</button>
+        <button data-i18n="cluster_page.nodes_tab.load_defaults_button" class="btn btn-defaults"></button>
+        <button data-i18n="cluster_page.nodes_tab.cancel_changes_button" class="btn btn-revert-changes"></button>
+        <button data-i18n="cluster_page.nodes_tab.apply_button" class="btn btn-success btn-apply"></button>
       </div>
     </div>
   </div>
