--- a/nailgun/static/templates/dialogs/create_cluster_wizard.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="modal-footer wizard-footer">
-  <button class="btn pull-left" data-dismiss="modal" data-i18n="dialog.create_cluster_wizard.cancel"></button>
+  <button class="btn pull-left" data-dismiss="modal" data-i18n="common.cancel_button"></button>
   <button class="btn prev-pane-btn"><i class="icon-prev" data-i18n="dialog.create_cluster_wizard.prev"></i></button>
   <button class="btn btn-success next-pane-btn"><span data-i18n="dialog.create_cluster_wizard.next"></span><i class="icon-next"></i></button>
   <button class="btn btn-success finish-btn" data-i18n="dialog.create_cluster_wizard.create"></button>
