--- a/nailgun/static/templates/cluster/node.html
+++ b/nailgun/static/templates/cluster/node.html
@@ -1,42 +1,38 @@
-<div class="node">
-  <div class="node-box">
-    <div class="node-content">
-      <div class="node-logo <%- node.get('manufacturer') ? 'manufacturer-' + node.get('manufacturer').toLowerCase() : '' %>"></div>
-      <div class="node-details"></div>
-      <div class="node-hardware">
-        <ul>
-        <li><%- $.t('cluster_page.nodes_tab.cpu', {defaultValue: 'CPU'}) %>: <%= node.resource('cores') || '?' %></li>
-        <li><%- $.t('cluster_page.nodes_tab.hdd', {defaultValue: 'HDD'}) %>: <%= node.resource('hdd') ? showDiskSize(node.resource('hdd')) : '?' + $.t('cluster_page.nodes_tab.gb', {defaultValue: 'GB'}) %></li>
-        <li><%- $.t('cluster_page.nodes_tab.ram', {defaultValue: 'RAM'}) %>: <%= node.resource('ram') ? showMemorySize(node.resource('ram')) : '?' + $.t('cluster_page.nodes_tab.gb', {defaultValue: 'GB'}) %></li>
-        </ul>
-      </div>
-      <div class="node-status">
-        <div class="progress"><div class="bar"></div></div>
-        <i></i>
-        <span class="node-status-label"></span>
-      </div>
-      <div class="node-button">
-          <button class="" title=""><i class=""></i></button>
-      </div>
-      <div class="node-name">
-        <div class="name enable-selection">
-          <% if (renaming) { %>
-            <input type="text"  value="<%- node.get('name') || '' %>" />
-          <% } else { %>
-            <p class="<%= renameable ? 'node-renameable' : '' %>" title="<%- renameable ? $.t('cluster_page.nodes_tab.node.edit_name', {defaultValue: 'Edit Name'}) : '' %>"><%- node.get('name') || node.get('mac') %></p>
-          <% } %>
-        </div>
-        <div class="role-list">
-          <ul class="roles"></ul>
-          <ul class="pending-roles"></ul>
-        </div>
-      </div>
-    </div>
-    <label class="node-checkbox">
-      <div class="custom-tumbler">
+<label class="node-container node-box">
+    <div class="custom-tumbler node-checkbox">
         <input type="checkbox" value="<%- node.id %>" />
         <!-- [if !IE |(gte IE 9)]> --><span>&nbsp;</span><!-- <![endif] -->
-      </div>
-    </label>
-  </div>
-</div>
+    </div>
+    <div class="node-content">
+        <div class="node-logo <%- node.get('manufacturer') ? 'manufacturer-' + node.get('manufacturer').toLowerCase() : '' %>"></div>
+        <div class="node-name-roles">
+            <div class="name enable-selection">
+                <% if (renaming) { %>
+                    <input type="text"  value="<%- node.get('name') || '' %>" />
+                <% } else { %>
+                    <p class="<%= renameable ? 'node-renameable' : '' %>" title="<%- renameable ? $.t('cluster_page.nodes_tab.node.edit_name', {defaultValue: 'Edit Name'}) : '' %>"><%- node.get('name') || node.get('mac') %></p>
+                <% } %>
+            </div>
+            <div class="role-list">
+                <ul class="roles"></ul>
+                <ul class="pending-roles"></ul>
+            </div>
+        </div>
+        <div class="node-button">
+            <button class="" title=""><i class=""></i></button>
+        </div>
+        <div class="node-status">
+            <div class="node-status-container">
+                <div class="progress"><div class="bar"></div></div>
+                <i></i>
+                <span class="node-status-label"></span>
+            </div>
+        </div>
+        <div class="node-details"></div>
+        <div class="node-hardware">
+            <span><%- $.t('cluster_page.nodes_tab.cpu', {defaultValue: 'CPU'}) %>: <%= node.resource('cores') || '?' %></span>
+            <span><%- $.t('cluster_page.nodes_tab.hdd', {defaultValue: 'HDD'}) %>: <%= node.resource('hdd') ? showDiskSize(node.resource('hdd')) : '?' + $.t('cluster_page.nodes_tab.gb', {defaultValue: 'GB'}) %></span>
+            <span><%- $.t('cluster_page.nodes_tab.ram', {defaultValue: 'RAM'}) %>: <%= node.resource('ram') ? showMemorySize(node.resource('ram')) : '?' + $.t('cluster_page.nodes_tab.gb', {defaultValue: 'GB'}) %></span>
+        </div>
+    </div>
+</label>
