Bootstrap to LESS way
Change-Id: Ic610e39157c0049564398b69f2bdda1905181b9e

--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -1,1 +1,3 @@
-@import 'main.css';
+@import '../js/libs/bower/bootstrap/less/bootstrap.less';
+@import (less) 'fonticon.css';
+@import (less) 'main.css';
