Bootstrap to LESS way
Change-Id: Ic610e39157c0049564398b69f2bdda1905181b9e

--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -1,1 +1,13 @@
-@import 'main.css';
+@import '../js/libs/bower/bootstrap/less/bootstrap.less';
+/* overriding bootstrap icons */
+[class^="icon-"],
+[class*=" icon-"] {
+  display: inline;
+  vertical-align: baseline;
+  background: none;
+  width: auto;
+  height: auto;
+  margin-top: 0;
+}
+@import (less) 'fonticon.css';
+@import (less) 'main.css';
